--- a/src/style.css
+++ b/src/style.css
@@ -2208,7 +2208,18 @@ ul.social li a.fa-google-plus:hover {
 .router-link-exact-active > a {
   background: #f3f3f3;
 }
-
+.complete {
+  background: #d52349;
+  color: #fff;
+  padding: 16px 40px;
+  border-radius: 0.6rem;
+  text-decoration: none;
+  font-weight: 700;
+  transition: all 0.3s ease;
+}
+.complete:hover {
+  background: #ce4664;
+}
 .current {
   background: #d52349;
   color: #fff !important;
